--- a/css/theme.css
+++ b/css/theme.css
@@ -35,6 +35,7 @@ body {
 .logo{
     width:200px;
     position:relative;
+    cursor: pointer;
 }
 
 .header-text{
@@ -52,6 +53,7 @@ body {
     width: 150px;
     margin-bottom: 20px;
     position:relative;
+    right: 150px;
 }
 
 #font{
@@ -78,4 +80,6 @@ canvas{
     float:left;
     margin-left:20%;
     position:relative;
+    bottom: 50px;
+    cursor: pointer;
 }
