--- a/css/theme.css
+++ b/css/theme.css
@@ -1,6 +1,7 @@
 * {
     margin: 0 auto;
     padding: 0;
+    font-family:'NanumSquare', sans-serif;
 }
 
 body {
@@ -72,18 +73,30 @@ h1 {
     position:relative;
 }
 
+.back{
+    color: rgb(134, 134, 134);
+    text-decoration: none;
+    font-size: 1vw;
+    font-weight: bold;
+}
+
+.back:hover{
+    color: rgba(134, 134, 134, 0.63);
+}
+
 #watch{
     width:70%;
     float:left;
-    display:flex; 
+    display:flex;
     overflow-x: hidden;
-    justify-content: center; 
-    align-items: center; 
+    justify-content: center;
+    align-items: center;
+    margin-top:101px;
 }
 
 canvas{
     float:left;
-    margin-left:15%;
+    margin-left:15.5%;
     position:relative;
     bottom: 50px;
     cursor: pointer;
